<resources>
    <string name="app_name">MyBooks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_a_book">Search for a Book</string>
    <string name="title_text">Title Text</string>
    <string name="author">Author:</string>
    <string name="pages">Pages:</string>
    <string name="description">Description:</string>
    <string name="ratings">Ratings:</string>
    <string name="book_type">Book Type:</string>
</resources>
